--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 			<title>Moodly - test page</title>
 	</head>
 	<body>
@@ -18,16 +19,16 @@
 		</nav>
 		<header>
             <h1>moodly</h1>
-            <p>this is cool tagline about awesome app</p>
+            <p class="par-header">this is cool tagline about awesome app</p>
         </header>
         <article>
-            <h3>about</h3>
-            <p>Tofu meditation asymmetrical vegan portland craft beer. Man bun hella food truck YOLO venmo franzen. Biodiesel sriracha mlkshk, twee beard kombucha flannel echo park ennui chicharrones semiotics vegan meditation tilde. </p>
-            <p>Literally tofu VHS, beard photo booth forage lo-fi flexitarian brooklyn slow-carb bicycle rights bushwick leggings.<br>Typewriter gastropub flannel seitan four loko, chia drinking vinegar.</p>
+            <h3 class="about">about</h3>
+            <p>Tofu meditation asymmetrical vegan portland craft beer. Man<br> bun hella food truck YOLO venmo franzen. Biodiesel sriracha<br> mlkshk, twee beard kombucha flannel echo park ennui chich-<br>arrones semiotics vegan meditation tilde. </p>
+            <p>Literally tofu VHS, beard photo booth forage lo-fi flexitarian<br> brooklyn slow-carb bicycle rights bushwick leggings.<br>Typewriter gastropub flannel seitan four loko, chia drinking<br> vinegar.</p>
         </article>
         <aside>
-            <h3>features</h3>
-            <p>Literally tofu VHS, beard photo booth forage lo-fi flexitarian brooklyn slow-carb bicycle rights bushwick leggings.<br>Typewriter gastropub flannel seitan four loko, chia drinking vinegar.</p>
+            <h3 class="h3-aside">features</h3>
+            <p>Literally tofu VHS, beard photo booth forage lo-fi flexitarian<br> brooklyn slow-carb bicycle rights bushwick leggings.<br>Typewriter gastropub flannel seitan four loko, chia drinking<br> vinegar.</p>
             <button>download</button>
         </aside>
 	</body>
